content/_generated-doc/2.7/config/quarkus-oauth2-o-auth2-runtime-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-oauth2-o-auth2-runtime-config_configuration]]link:#quarkus-oauth2-o-auth2-runtime-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-oauth2-o-auth2-runtime-config_quarkus.oauth2.client-id]]`link:#quarkus-oauth2-o-auth2-runtime-config_quarkus.oauth2.client-id[quarkus.oauth2.client-id]`

[.description]
--
The OAuth2 client id used to validate the token. Mandatory if the extension is enabled.
--|string 
|


a| [[quarkus-oauth2-o-auth2-runtime-config_quarkus.oauth2.client-secret]]`link:#quarkus-oauth2-o-auth2-runtime-config_quarkus.oauth2.client-secret[quarkus.oauth2.client-secret]`

[.description]
--
The OAuth2 client secret used to validate the token. Mandatory if the extension is enabled.
--|string 
|


a| [[quarkus-oauth2-o-auth2-runtime-config_quarkus.oauth2.introspection-url]]`link:#quarkus-oauth2-o-auth2-runtime-config_quarkus.oauth2.introspection-url[quarkus.oauth2.introspection-url]`

[.description]
--
The OAuth2 introspection endpoint URL used to validate the token and gather the authentication claims. Mandatory if the extension is enabled.
--|string 
|


a| [[quarkus-oauth2-o-auth2-runtime-config_quarkus.oauth2.ca-cert-file]]`link:#quarkus-oauth2-o-auth2-runtime-config_quarkus.oauth2.ca-cert-file[quarkus.oauth2.ca-cert-file]`

[.description]
--
The OAuth2 server certificate file. *Warning*: this is not supported in native mode where the certificate must be included in the truststore used during the native image generation, see link:native-and-ssl.html[Using SSL With Native Executables].
--|string 
|

|===